<?xml version="1.0" encoding="utf-8"?>
<!--Bichoy Sedrak - CSIT551 Mobile Computing Summer 2022-->
<!-- a fragment to show the money won and wining at the end of the test -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"

    android:id="@+id/Scroll1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:contentDescription="@string/windialog">

    <LinearLayout
        android:id="@+id/score"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_500">

        <!-- Wining message -->
        <TextView
            android:id="@+id/message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:hint="@string/message"
            android:padding="3dp"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textColorHint="#37474F"
            android:textSize="25sp"
            android:textStyle="bold" />

        <!-- Score $$$-->
        <TextView
            android:id="@+id/tvscore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/Background"
            android:gravity="center"
            android:hint="@string/you_won"
            android:padding="3dp"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/purple_700"
            android:textColorHint="#0277BD"
            android:textSize="30sp"
            android:textStyle="bold" />

        <!-- the Congratulation logo -->
        <ImageView
            android:id="@+id/congratulation"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:contentDescription="@string/image"
            android:src="@drawable/congratulation" />

        <!-- Reset Button -->
        <Button
            android:id="@+id/reset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:backgroundTint="@color/Background"
            android:text="@string/reset"
            android:textAllCaps="false"
            android:textColor="#0277BD"
            android:textSize="25sp" />



    </LinearLayout>
</ScrollView>

    <!-- End Bichoy Sedrak-->