<?xml version="1.0" encoding="utf-8"?>
<!--Bichoy Sedrak - CSIT551 Mobile Computing Summer 2022-->
<!-- Who Wants to Be a Millionaire Game-->

<!-- the Main Game layout that has questions and answers. -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:contentDescription="@string/app_name"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Money picture -->
        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="68dp"
            android:layout_height="55dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/image"
            app:srcCompat="@drawable/coins" />

        <!-- TextView to show the won Money -->
        <TextView
            android:id="@+id/Score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/_0"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="30sp"
            app:layout_constraintEnd_toStartOf="@+id/imageView3"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- progress picture -->
        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="57dp"
            android:layout_height="59dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="5dp"
            app:layout_constraintEnd_toStartOf="@+id/Timer"
            app:layout_constraintStart_toEndOf="@+id/Score"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/image"
            app:srcCompat="@drawable/tolerance" />


        <!-- how many questions attempted-->
        <TextView
            android:id="@+id/Timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="26dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView3"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Application logo -->
        <ImageView
            android:id="@+id/logo"
            android:layout_width="210dp"
            android:layout_height="135dp"
            android:layout_marginTop="100dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/image"
            app:srcCompat="@drawable/logo2" />

        <!-- TextView to show the questions-->
        <TextView
            android:id="@+id/TVQuestion"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/questions"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo" />

        <!-- setting up all 4 buttons -->
        <Button
            android:id="@+id/buttonA"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/option_a"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TVQuestion"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/buttonB"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/option_b"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonA"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/buttonC"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/option_c"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonB" />

        <Button
            android:id="@+id/buttonD"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/option_d"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonC"
            tools:ignore="TextContrastCheck" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>

<!-- End by Bichoy Sedrak -->