<?xml version="1.0" encoding="utf-8"?>

<!--Bichoy Sedrak - CSIT551 Mobile Computing Summer 2022-->
<!-- Who Wants to Be a Millionaire Game-->


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:contentDescription="@string/app_name"
    tools:context=".MainMenu">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Application logo -->
        <ImageView
            android:id="@+id/logo"
            android:layout_width="368dp"
            android:layout_height="308dp"
            android:layout_marginTop="30dp"
            android:contentDescription="@string/image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo2" />

        <!-- information-->
        <TextView
            android:id="@+id/info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/created_by_nbichoy_sedrak_nsedrakb1_montclair_edu"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo" />

        <!-- back to main screen button-->
        <ImageView
            android:id="@+id/back"
            android:layout_width="223dp"
            android:layout_height="130dp"
            android:layout_marginTop="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/info"
            app:srcCompat="@drawable/back"
            android:contentDescription="@string/image" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

    <!-- End by Bichoy Sedrak -->